--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dev = [
     "django-eventstream>=4.5.1",
     "httpx>=0.28.1",
     "litestar>=2.15.1",
+    "mypy>=1.15.0",
     "pytest>=8.3.5",
     "pytest-asyncio>=0.25.3",
     "sse-starlette>=2.2.1",
