--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,24 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
-    "brotli>=1.1.0",
     "multidict>=6.2.0",
+]
+
+[project.optional-dependencies]
+all = [
+    "brotli>=1.1.0",
+    "zstandard>=0.23.0",
+]
+br = [
+    "brotli>=1.1.0",
+]
+zstd = [
+    "zstandard>=0.23.0",
 ]
 
 [dependency-groups]
 dev = [
+    "brotli>=1.1.0",
     "django>=4.2.20",
     "django-eventstream>=4.5.1",
     "httpx>=0.28.1",
@@ -21,6 +33,7 @@ dev = [
     "sse-starlette>=2.2.1",
     "starlette>=0.46.1",
     "typing-extensions>=4.12.2",
+    "zstandard>=0.23.0",
 ]
 
 [tool.pytest.ini_options]
