--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,9 +27,10 @@ dev = [
     "django-eventstream>=4.5.1",
     "httpx>=0.28.1",
     "litestar>=2.15.1",
-    "mypy>=1.15.0",
+    "pyright>=1.1.399",
     "pytest>=8.3.5",
     "pytest-asyncio>=0.25.3",
+    "ruff>=0.11.6",
     "sse-starlette>=2.2.1",
     "starlette>=0.46.1",
     "typing-extensions>=4.12.2",
